Modified the milestone

--- a/milestone_report.tex
+++ b/milestone_report.tex
@@ -26,7 +26,7 @@
 
 \section{Implementation Languages}
 
-We chose to use a library utilizing HTML5 (Paper.js) for the game graphics, because it is supported by many browsers and operating systems, is a new technology and is fast (unlike Flash). We are also using jQuery to simplify working with JavaScript. We chose to use Django (for Python) for making back-end of the game because of prior experience with this framework. It is going to be deployed on Heroku which, again, some of us have used before.
+We chose to use a library utilizing HTML5 (Paper.js) for the game graphics, because it is supported by many browsers and operating systems, is a new technology and is fast (unlike Flash). We are also using jQuery to simplify working with JavaScript (e.g. AJAX, JSON parsing). We chose to use Django (for Python) for making back-end of the game because of prior experience with this framework. It is going to be deployed on Heroku which, again, some of us have used before.
 
 \section{Game Setting}
 
@@ -55,8 +55,6 @@ Our game is a survival game, where players (represented by magical ghosts wearin
 
 
 \section{Additional Features}
-
-There is also a chat feature for the multiplayer games, with which players can co-ordinate their turns. For example, if multiple people try to pick up the ammo box, only one will succeed (this will likely be randomly determined). Similarly, two people building a barricade in the same place will not make it any stronger.
 
 The game will slowly get harder, too. As yet, we haven’t decided how this will happen, but it will most likely be one of two things: either there will be more snails per group / more groups spawned, or the snails will simply be stronger (harder to kill, will destroy barricades faster, etc).
 
