--- a/report.tex
+++ b/report.tex
@@ -12,22 +12,22 @@
 \clearpage
 
 \section{Introduction}
-We set out from the beginning to make a game, an original game at that. In addition to being original, we wanted the game to be fun to play, and of course be online multiplayer. We also wanted the game to be lightweight in terms of connection demands, and lightweight in terms of demand placed on any server we might use. Our final objective was that the game must be visually pleasing, which would mean inevitably taking more time and care in the artwork than programmers usually do. \\ \\
+We set out from the beginning to make a game, and to make it original. In addition to being original, we wanted the game to be fun to play, and of course be online multiplayer. We also wanted the game to be lightweight in terms of connection demands, and in terms of demand placed on any server we might use. Our final objective was that the game must be visually pleasing, which would inevitably mean taking more time and care in the artwork than programmers usually do. \\ \\
 
-For some reason the first paragraph was not indented but this one is, it makes me very sad, I have become depressed. A depressed Sealion if you will. \\ \\
+For some reason the first paragraph was not indented but this one is, it makes me very sad, I have become depressed. A depressed sea-lion if you will. \\ \\
 
-To meet our low networking demands, we decided to make a turn based game. This would make the latency requirements very low and would allow anyone in the world to play against each other. Wheras if someone is playing a latency critical game such as Call of Duty, and the client and host are in England and Brazil for example then the latency will cause the game to be unplayable or at least have a severely degraded experience.
+To meet our low networking demands, we decided to make a turn based game. This would make the latency requirements very low and would allow anyone in the world to play against each other, regardless of location. For example, if someone is playing a latency critical game such as Call of Duty, and the client and host are in England and Brazil respectively, then the latency will cause the game to be unplayable or at least have a severely degraded experience. This is something we wanted to be sure of avoiding.
 
-Eventually we settled on making a Defence style game, where the players are co-operating to prevent a house from being invaded by enemies.
+Eventually we settled on making a game based on defending a certain location, and decided to force player co-operation in preventing a house from being invaded by enemies.
 
 
 
 
 \section{Project Management}
 \subsection{Group Structure}
-We need to wack this report out quickly because england are playing.
+We need to whack this report out quickly because england are playing.
 \subsection{Git}
-We used git as the version control for our project, more specifically we decided to use the online git hosting service github. We did this because it has a nice web interface, git broke on us in labs before. Github provides nice graphs, and you dont have to connect to the imperial vpn to use it.
+We used git as the version control for our project; more specifically the online git hosting service, github. We did this because it has a nice web interface, git broke on us in labs before. I don't think that this section has been typed out entirely seriously. Github provides nice graphs, and you dont have to connect to the imperial vpn to use it.
 \subsection{PivotalTracker}
 \subsection{Other tools}
 
@@ -39,6 +39,7 @@ Snails, and lots of them.
 \subsection{Front end}
 :O
 \subsection{Back end}
+Lol, back end ;)
 
 \section{Conclusion}
 In conclusion, we are the best.
