--- a/report.tex
+++ b/report.tex
@@ -16,9 +16,9 @@ We set out from the beginning to make a game, and to make it original. In additi
 
 For some reason the first paragraph was not indented but this one is, it makes me very sad, I have become depressed. A depressed sea-lion if you will. \\ \\
 
-To meet our low networking demands, we decided to make a turn based game. This would make the latency requirements very low and would allow anyone in the world to play against each other, regardless of location. For example, if someone is playing a latency critical game such as Call of Duty, and the client and host are in England and Brazil respectively, then the latency will cause the game to be unplayable or at least have a severely degraded experience. This is something we wanted to be sure of avoiding.
+To meet our low networking demands, we decided to make a turn based game. This would make the latency requirements very low and would allow anyone in the world to play against each other, regardless of location. For example, if someone is playing a latency critical game such as Call of Duty, and the client and host are in England and Brazil respectively, then the latency will cause the game to be unplayable or at least have a severely degraded experience. This is something we wanted to be sure of avoiding. \\ \\
 
-Eventually we settled on making a game based on defending a certain location, and decided to force player co-operation in preventing a house from being invaded by enemies.
+Eventually we settled on making a game based on defending a certain location, and decided to force player co-operation in preventing a house from being invaded by enemies. 
 
 
 
@@ -29,6 +29,7 @@ We need to whack this report out quickly because england are playing.
 \subsection{Git}
 We used git as the version control for our project; more specifically the online git hosting service, github. We did this because it has a nice web interface, git broke on us in labs before. I don't think that this section has been typed out entirely seriously. Github provides nice graphs, and you dont have to connect to the imperial vpn to use it.
 \subsection{PivotalTracker}
+To organise our team, we used a website called Pivotal Tracker. This allowed us to create tasks, set a priority and a difficulty for each task, and to assign group members to complete each task. Pivotal Tracker automatically arranges tasks to maximise efficient time use, based on previous performance. A list of current tasks is maintained, along with a backlog. Tasks are made 'current' when it is predicted that there is enough free space (For example, if the group works quickly, there will be a larger capacity in 'current tasks'. If the group works slowly, Pivotal Tracker makes sure there are fewer current tasks to complete).
 \subsection{Other tools}
 
 \section{Program Description}
