--- a/report.tex
+++ b/report.tex
@@ -33,13 +33,32 @@ We used git as the version control for our project; more specifically the online
 
 \section{Program Description}
 \subsection{Outline}
-Snails, and lots of them.
+As mentioned in the introduction, the program is a turn based game. The players are Ghosts defending a haunted house. The aim of the game is to stay "alive" (they are ghosts) for as many tuns as possible. The enemies are giant evil snails who will try to invade the house and attack you. Each player will take turns to move, then the AI will take its turn and all the snails will move.
 \subsection{Rules}
+
+\textbf{Moving around the house} \\ 
+The house is split up in to 21 different rooms. Each room can have a door leading left and/or tright, and stairs leading up and/or down. It takes one turn to move to a different room taking one of these paths, for ghosts and for snails. The ghosts cannot move through walls because they are wearing magic hats which allow them to interact with the real world and defend the house.\\ \\
+\textbf{Barricades} \\
+Ghosts have the choice of barricading stairs or doorways, it takes one turn to build or repair a barricade. With a barricade in place, neither ghosts nor snails can pass through it. Ghosts have the option of breaking down their own barricade which takes one turn. Snails can attack barricades which will decrease their health, finally destroying the barricade when its health is 0. When ghosts repair barricades their health is restored to 100\%, however, barricades cannot be repaired when there are snails on the other side for fear they will reach through the barricade and attack the ghost on the other side. \\ \\
+\textbf{Shooting} \\
+Ghosts are equiped with pistols, which they may choose to shoot at snails in adjacent rooms (possibly through a barricade) taking one turn. Shooting at a group of snails will kill one of them, it also drains one ammo clip from the ghost. Ghosts may carry up to 5 ammo clips, and cannot shoot when carrying 0. Ghosts can take one turn replenishing their ammo clips from the ammo box (see Ammo box). \\ \\
+
+\textbf{Ammo box} \\
+There is one ammo box in the house which holds an infinite supply of ammo clips. Ghosts can only reload when in the same room as the ammo box, and only if the ammo box is on the floor. Ghosts can pick up the ammo box, consuming one turn, in order to move it to a different room. While holding the box ghosts can only move around or drop the box. Only one ghost can be holding the box at any one time, and if the box is being held by a player then nobody can replenish their ammo. \\ \\
+
+\textbf{Snail behaviour} \\
+Snails spawn in groups of variable size outside the house. Groups of snails will attack and move as one, and snails can only move/spawn/attack when it is their turn.
+
+\textbf{Ghost death} \\
+The ghosts die (descend to hell) when they are in the same room as any number of snails. The game is over when all ghosts are dead.
+
 \subsection{Aesthetics}
 \subsection{Front end}
 :O
 \subsection{Back end}
 Lol, back end ;)
+\subsection{Acknowledgements}
+We used twitter bootstrap CSS, Javascript and some glyph icons for the website layout. We also used the Javascript libraries: Jquery and Paper.js for simplification and for working with the HTML5 canvas. Do we acknowledge Django? All of the artwork within the canvas is original.
 
 \section{Conclusion}
 In conclusion, we are the best.
