--- a/report.tex
+++ b/report.tex
@@ -71,9 +71,10 @@ TODO: :O
 TODO: Lol, back end ;)
 
 \subsection{Acknowledgements}
-We used twitter bootstrap CSS, Javascript, and some glyph icons for the website layout. We also used some Javascript libraries: JQuery and Paper.js, for simplification and for working with the HTML5 canvas. TODO: Do we acknowledge Django? All of the artwork within the canvas is original.
+We used Twitter bootstrap CSS, Javascript, and some glyph icons for the website layout. We also used some Javascript libraries: JQuery and Paper.js, for simplification and for working with the HTML5 canvas. TODO: Do we acknowledge Django? All of the artwork within the canvas is original.
 
 \section{Conclusion}
-TODO: In conclusion, we are the best.
+In conclusion, we are the best. Also talk about chat feature. :D
+TODO: done, not done, would do differently in future, learned from the project
 
 \end{document}
