--- a/reports/final/final.tex
+++ b/reports/final/final.tex
@@ -24,26 +24,26 @@ Eventually we settled on making a game based on defending a certain location, an
 \section{Project Management}
 
 \subsection{Group Structure}
-Initially, we split into a pair and a single person, with Craig and Jack working on the graphics, artwork and game representation of the game. Milan focused on creating the layout for the website, and Lay a structure for the back end Django code. As the project has progressed everybody has been working slightly in other areas as the areas overlap.
+Initially, we split into a pair and a single person, with Craig and Jack working on the graphics, artwork and game representation of the game. Milan focused on creating the layout for the website, and lay a structure for the back end Django application. As the project has progressed everybody has been working slightly in other areas as the areas overlap.
 
 
 \subsection{Git}
-We used git as the version control for our project; more specifically the online git hosting service, github. Git is simple and easy to use, and we have become very familiar with it from previous group projects. It includes the ability to rollback to previous commits to correct mistakes, which is very useful when starting a project from scratch.
+We used git as the version control for our project; more specifically the online git hosting service, github. Git is simple and easy to use, and we have become very familiar with it from previous group projects. It is a distributed version control system which makes it great for working independently of other team members.
 
 \subsection{PivotalTracker}
-To organise our team, we used a website called Pivotal Tracker. This allowed us to create tasks, set a priority and a difficulty for each task, and to assign group members to complete each task. Pivotal Tracker automatically arranges tasks to maximise efficient time use, based on previous performance. A list of current tasks is maintained, along with a backlog. Tasks are made 'current' when it is predicted that there is enough free space (For example, if the group works quickly, there will be a larger capacity in 'current tasks'. If the group works slowly, Pivotal Tracker makes sure there are fewer current tasks to complete).
+To organise our team, we used a project management software called Pivotal Tracker. This allowed us to create tasks, set a priority and a difficulty for each task, and to assign group members to complete each task. Pivotal Tracker automatically arranges tasks to maximise efficient time use, based on previous performance. A list of current tasks is maintained, along with a backlog. Tasks are made 'current' when it is predicted that there is enough free space (For example, if the group works quickly, there will be a larger capacity in 'current tasks'. If the group works slowly, Pivotal Tracker makes sure there are fewer current tasks to complete).
 
 \subsection{Other tools}
 
 \subsection{Implementation Languages}
-We chose to write the front end in Javascript, obviously, and we chose to use this as a basis for the graphics also. Instead of using flash or a java applet. This is because unlike the previous 2 choices, HTML5 will load faster and it is a new technology which will continue to be supported by browsers for some time. People are already talking about stopping flash support, on mobile devices in particular.
+We chose to write the front end in Javascript and HTML5, obviously, and we chose to use this as a basis for the graphics also. Instead of using Flash or a Java applet. This is because unlike the previous 2 choices, a HTML5-based game will load faster and as a new technology standard it is gaining good webbrowser support. People are already talking about stopping flash support, on mobile devices in particular.
 
-We chose to use Django for the back end because some of us have previous experience using the platform, TODO - Milan: write more.
+We chose to use Django for the back end because some of us have previous experience using the platform and because of its many useful features. For example, Object-relational mapping (ORM) allows us to effectively deal with database queries while also having a good object-oriented design for the application's entities. With view templates we can easily create HTML parts of the website and with URL mapping we have full control over the URLs used by the website (so AJAX calls can be prefixed with 'ajax-' for example).
 
 \section{Program Description}
 
 \subsection{Outline}
-As mentioned in the introduction, the program is a turn based game. The players are Ghosts defending a haunted house. The aim of the game is to stay "alive" (they are ghosts) for as many turns as possible. The enemies are evil giant snails who will try to invade the house and attack you. Each player will take turns to move, then the AI will take its turn and all the snails will move.
+As mentioned in the introduction, the program is a turn based game. The players are ghosts defending a haunted house. The aim of the game is to stay "alive" (they are ghosts) for as many turns as possible. The enemies are evil giant snails who will try to invade the house and attack you. Each player will take turns to move, then the AI will take its turn and all the snails will move.
 
 \subsection{Rules}
 \textbf{Moving around the house} \\ 
@@ -60,7 +60,8 @@ Snails spawn in groups of variable size outside the house. Groups of snails will
 The ghosts 'die' (descend to hell) when they are in the same room as any number of snails. The game is over when all ghosts are dead.
 
 \subsection{Aesthetics}
-We used Gimp to create all of the art for the game. We had to balance the performance issues of including large files, with the need for the game to look polished. Because the game includes variable zoom levels, we needed to make sure that the art looked acceptable from any distance. This has lead to some large image files needing to be loaded, though using javascript 'symbols' means that each only needs to be loaded once. To help reduce loading time, the largest image (the house background) was compressed, which has caused some lost data - though not enough to be easily noticed. \\
+TODO - JS symbols?, 'lost data'?
+We used Gimp to create all of the artwork for the game. We had to balance the performance issues of including large files (transfer time over the Internet), with the need for the game to look polished. Because the game includes variable zoom levels, we needed to make sure that the art looked acceptable from any distance. This has lead to some large image files needing to be loaded, though using javascript 'symbols' means that each only needs to be loaded once. To help reduce loading time, the largest image (the house background) was compressed, which has caused some lost data - though not enough to be easily noticed. \\
 
 Animations were added for certain actions, such as player death, shooting, and the idle snail movements. These were simply added to make the game more interesting for players waiting for their turn; instead of simply watching a static screen, there would always be movement. However, it was decided early on that player and enemy movement should be fairly simple to implement, which was one of the reasons for choosing ghosts and snails (both using a gliding motion to move - no additional moving parts).
 
@@ -71,7 +72,7 @@ TODO: :O
 TODO: Lol, back end ;)
 
 \subsection{Acknowledgements}
-We used Twitter bootstrap CSS, Javascript, and some glyph icons for the website layout. We also used some Javascript libraries: JQuery and Paper.js, for simplification and for working with the HTML5 canvas. TODO: Do we acknowledge Django? All of the artwork within the canvas is original.
+We used Twitter Bootstrap CSS, Javascript, and glyphicons for the website layout. We also used some Javascript libraries: jQuery and Paper.js, for DOM (Document Object Model) handling, AJAX calls and for working with the HTML5 canvas. The Django framework was used for the server-side part of the website. All of the artwork within the canvas is original.
 
 \section{Conclusion}
 In conclusion, we are the best. Also talk about chat feature. :D
