Snail behaviour and conclusion

--- a/reports/final/final.tex
+++ b/reports/final/final.tex
@@ -50,14 +50,13 @@ Ghosts are equiped with pistols, which they may choose to shoot at snails in adj
 \textbf{Ammo box} \\
 There is one ammo box in the house, which holds an infinite supply of ammo clips. Ghosts can only reload when in the same room as the ammo box, and only if the ammo box is on the floor. Ghosts can pick up the ammo box, consuming one turn, in order to move it to a different room. While holding the box ghosts can only move around or drop the box. Only one ghost can be holding the box at any one time, and if the box is being held by a player then nobody can use it to replenish their ammo. \\ \\
 \textbf{Snail behaviour} \\
-Snails spawn in groups of variable size outside the house. Groups of snails will attack and move as one, and snails can only move/spawn/attack when it is their turn. \\ \\
+Snails spawn in groups of variable size outside the house. Groups of snails will attack and move as one, and snails can only move/spawn/attack when it is their turn. Currently, snail groups will spawn one of 2 movement algorithms selected at random. One of them the algorithms selects the shortest possible route to the closest player, destroying any barricades in its way. The other algorithm will select the fastest route, ie it takes into account the route that will take the least number of turns to travel. We chose these 2 seperate algorithms to make the snails more unpredictable and less easy to trick by the players. However this heuristic may be subject to change. \\ \\
 \textbf{Ghost death} \\
 The ghosts 'die' (descend to hell) when they are in the same room as any number of snails. The game is over when all ghosts are dead.
 
 \subsection{Aesthetics}
 TODO - JS symbols?, 'lost data'?
-We used Gimp to create all of the artwork for the game. We had to balance the performance issues of including large files (transfer time over the Internet), with the need for the game to look polished. Because the game includes variable zoom levels, we needed to make sure that the art looked acceptable from any distance. This has lead to some large image files needing to be loaded, though using paper.js 'symbols' means that each only needs to be loaded once. To help reduce loading time, the largest image (the house background) was compressed, which has caused some data loss in the image (that is, there is some loss of small details) - though not enough to be easily noticed. \\
-
+We used Gimp to create all of the artwork for the game. We had to balance the performance issues of including large files (transfer time over the Internet), with the need for the game to look polished. Because the game includes variable zoom levels, we needed to make sure that the art looked acceptable from any distance. This has lead to some large image files needing to be loaded, though using paper.js 'symbols' means that each only needs to be loaded once. To help reduce loading time, the largest image (the house background) was compressed, which has caused some data loss in the image (that is, there is some loss of small details) - though not enough to be easily noticed. \\ \\
 Animations were added for certain actions, such as player death, shooting, and the idle snail movements. These were simply added to make the game more interesting for players waiting for their turn; instead of simply watching a static screen, there would always be movement. However, it was decided early on that player and enemy movement should be fairly simple to implement, which was one of the reasons for choosing ghosts and snails (both using a gliding motion to move - no additional moving parts).
 
 \subsection{Front end}
@@ -73,5 +72,5 @@ We used Twitter Bootstrap CSS, Javascript, and glyphicons for the website layout
 In conclusion, we are the best. Also talk about chat feature. :D
 TODO: done, not done, would do differently in future, learned from the project \\ \\
 \textbf{What we have learned} \\
-We set out from the beginning to make a game, and to make it original. In addition to being original, we wanted the game to be fun to play, and of course be online multiplayer. We also wanted the game to be lightweight in terms of connection demands, and in terms of demand placed on any server we might use. Our final objective was that the game must be visually pleasing, which would inevitably mean taking more time and care in the artwork than programmers usually do. \\ \\
+We only started using Pivotal tracker after the milstone report when it was suggested we use some project management software. We were sceptical at first, but after using it for a week or so it has been noticably beneficial to the project. Not only to assign work to each other and keep the work organised, but also to predict what stages we will be by monitoring our working velocity.
 \end{document}
