--- a/reports/final/final.tex
+++ b/reports/final/final.tex
@@ -64,7 +64,13 @@ Animations were added for certain actions, such as player death, shooting, and t
 TODO: :O
 
 \subsection{Back end}
-TODO: Lol, back end ;)
+As mentioned before, the back end of the application uses Python's Django framework. Django is used for keeping track of players and games, producing HTML page output and communicating with the Javascript framework using JSON responses. Sessions are used to associate website users with player entities.
+
+The application is deployed on a cloud platform Heroku. Using Heroku (heroku.com) as a hosting is only a little bit harder than pushing into a remote Git repository. Data used by the backend is stored in a MySQL database which is provided by Xeround (xeround.com). Research suggests that using an external database solution as compared to Heroku's own PostgreSQL server. As this game is just a university assignment we are using free plans of both of these services which work well however their overall performance would not suffice to support a big number of users of our website.
+
+The game works quite well using just the web browser base front-end. However, to provide multiplayer version and ensuring that players don't cheat the server-side component of the game is needed. Clients poll the server for new data every second and synchronise their game states with the server. The whole game state as well as the latest action of the players is returned by the server. This way we can provide nice animations for only the things which changed while making sure the game state is consistent across all the players. In order to make the processing of server responses easy on the front end we are often sending JSON formatted Javascript objects back to clients.
+
+As mentioned before, the server validates all player actions and disconnects players who try to execute invalid actions. Invalid actions such as trying to reload when the ammo box is in a different room are not possible to do from the game interface which means that if a request comes from a player trying to do this it must be someone who is cheating.
 
 \subsection{Acknowledgements}
 We used Twitter Bootstrap CSS, Javascript, and glyphicons for the website layout. We also used some Javascript libraries: jQuery and Paper.js, for DOM (Document Object Model) handling, AJAX calls and for working with the HTML5 canvas. The Django framework was used for the server-side part of the website. All of the artwork within the canvas is original.
